--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   go_router: ^14.8.1
   dio: ^5.7.0
   shared_preferences: ^2.3.4
+  google_sign_in: ^6.2.2
   fl_chart: ^0.70.2
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.2
